--- a/Supermarket/Supermarket/Supermarket.vcxproj.filters
+++ b/Supermarket/Supermarket/Supermarket.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Compra_detalle.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Compra_Master.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Persona.h">
@@ -84,6 +87,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Compra_detalle.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Compra_Master.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
